formalized the flask structure using flask_Blueprints

--- a/Pipfile
+++ b/Pipfile
@@ -9,3 +9,9 @@ python-dotenv = "*"
 [packages]
 flask = "*"
 gunicorn = "*"
+requests = "*"
+oauthlib = "*"
+pyopenssl = "*"
+flask-login = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
