feat: implement google oauth login phase

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,10 @@
+# Variables required to run Flask server
 FLASK_APP=application.py
 FLASK_ENV=development
 FLASK_DEBUG=0
+
+# A default secret key for signed cookies and security related tools. Don't share this.
+SECRET_KEY=b'\xd3xa({\xec\x19\xab\xc6\x9d\xa2*\xe3\xe2\x0b\xba'
+
+# Google Client ID
+GOOGLE_CLIENT_ID=put your google's oauth client id
