--- a/sample.env
+++ b/sample.env
@@ -8,3 +8,4 @@ SECRET_KEY=b'\xd3xa({\xec\x19\xab\xc6\x9d\xa2*\xe3\xe2\x0b\xba'
 
 # Google Client ID
 GOOGLE_CLIENT_ID=put your google's oauth client id
+GOOGLE_CLIENT_SECRET=put your google secret key 
